update vid demo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wedding Invitation</title>
     <!-- IMPORT FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,7 +40,7 @@
           </div>
         <div class="carousel__main">
               <div class="carousel__item">
-                  <img src="./img/img1.jpg">
+                  <img src="./img/img3.jpg">
                   <p class="pmid">24-12-2016</p>
                   <p class="pbot"> THE DAY WE MET</p>
               </div>
@@ -50,7 +50,7 @@
                 <p class="pbot"> STORIES OPENNING </p>
               </div>
               <div class="carousel__item">
-                <img src="./img/img3.jpg">
+                <img src="./img/img1.jpg">
                 <p class="pmid">20-11-2020</p>
                 <p class="pbot"> THE NEXT JOURNEY</p>
               </div>
